GNOME Bugzilla – Bug 574067
context menu lists eject and unmount option
Last modified: 2009-04-12 01:33:10 UTC
using 2.25.92, right click on a cdrom icon, eject and unmount are listed which is confusing for users who don't know the difference, only eject should be there
2009-03-04 Alexander Larsson <alexl@redhat.com> Bug 574067 – context menu lists eject and unmount option * src/file-manager/fm-directory-view.c: * src/file-manager/fm-tree-view.c: * src/nautilus-places-sidebar.c: Never show unmount menu item if we're showing eject, as its a superset of unmount.
There certainly are Gnome users that know the difference between unmount and eject, and they would like to have both options, see bug 337598 (registered 3 years ago): http://bugzilla.gnome.org/show_bug.cgi?id=337598 Couldn't be added an option to show also unmount menu item regardless of eject ?
No, this is wrong. Especially since eject will unmount all volumes and either a) eject the media (cdrom); or b) make all the partitions go away (e.g. usb sticks). This is especially going to be a problem given the proposed changes in bug 576587 (e.g. make everything ejectable). Please revert.
I've re-enabled both unmount and eject as per dicussion in bug 576587
do you really want to change that in stable now rather than wait for next cycle to make something coherent for users?
(In reply to comment #5) > do you really want to change that in stable now rather than wait for next cycle > to make something coherent for users? Doesn't comment 3 illustrate why that behavior was broken to begin with?